--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 chrono = { version="0.4.19", features= [ "serde"]}
 crossterm = { version="0.19.0", features= [ "serde"]}
-rand = { version="0.8.3", default-features = false, features = ["std"] }
+rand = { version="0.8.3", features = ["std"] }
 serde = { version="1.0.125", features = ["derive"] }
 serde_json = "1.0.64"
 thiserror = "1.0.24"
