--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ serde = { version="1.0.125", features = ["derive"] }
 serde_json = "1.0.64"
 thiserror = "1.0.24"
 tui = { version="0.16.0", default-features = false, features = ['crossterm', 'serde'] }
+unicode-width = "0.1.9"
