--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-chrono = { version="0.4.19", features= [ "serde"]}
-crossterm = { version="0.21.0", features= [ "serde"]}
+chrono = { version="0.4.19", features= ["serde"] }
+crossterm = { version="0.27.0", features= ["serde"] }
 home = "0.5.3"
 rand = { version="0.8.3", features = ["std"] }
 serde = { version="1.0.125", features = ["derive"] }
 serde_json = "1.0.64"
 thiserror = "1.0.24"
-tui = { version="0.16.0", default-features = false, features = ['crossterm', 'serde'] }
+ratatui = { version="0.24.0", features = ['serde','all-widgets'] }
 unicode-width = "0.1.9"
